@@ -17,6 +17,7 @@
 -スマホ表示時のボタンヘルプを無効にしました。
 -非公開記事数をカウントしておくよう変更しました。
 -jQuery UIの ui-tabs, accordion の使用をやめました。((大して重要ではない割に、CSSの記述を複雑にしていたので除去しました。))
+-【Plubin/AMP】大きい画像がはみ出さないように layout="intrinsic" を追加しました。
 -【Fix】PostgreSQL/MySQL運用時、外部画像取り込みが動作しない。
 -【Fix】画像取り込み時のエラーメッセージがちゃんと表示されない。
 -【Fix】システムチェック画面でCryptXの確認が正しくなかった。
